[tool.poetry]
name = "clinner"
version = "1.12.0"
description = "Command Line Interface builder that helps creating an entry point for your application."
authors = ["José Antonio Perdiguero López <perdy@perdy.io>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/PeRDy/clinner"
keywords = ["command", "cli", "interface", "run", "script"]

[package]
include = ["clinner/**/*.py"]

[tool.poetry.dependencies]
python = "^3.5"
colorlog = "^3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
pytest-xdist = "^1.22"
pytest-cov = "^2.5"
tox = "^3.0"
ipython = "^6.4"
sphinx = "^1.7"
sphinx_rtd_theme = "^0.4.0"
flake8 = "^3.5"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''
